# itosbot

./: .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
src/: __main__.py  settings.py  sticker_rate_limit.py
src/converter/: __init__.py  colors.py  exceptions.py  image.py  video.py
src/handlers/: __init__.py  emoji_converter.py  errors.py  images.py  start.py  videos.py
src/middlewares/: __init__.py  antiflood.py
src/utils/: __init__.py  random.py
