[project]
name = "itosbot"
version = "0.1.0"
description = ""
authors = [{ name = "Alex", email = "42418433+aiexz@users.noreply.github.com" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "aiogram>=3.22.0",
    "pillow>=11.3.0",
    "pydantic-settings>=2.11.0",
    "numpy>=2.0.0",
]
